--- a/app/src/main/res/layout/item_user_search.xml
+++ b/app/src/main/res/layout/item_user_search.xml
@@ -2,15 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_edit_field"
-        android:layout_marginBottom="10dp"
-        android:padding="8dp">
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/item_user_search"
+        android:paddingHorizontal="35dp">
 
     <TextView
-            android:textAppearance="@style/list_member_name"
+            android:textAppearance="@style/search_user_name"
             android:textAlignment="center"
             android:autoSizeTextType="uniform"
             android:layout_width="0dp"
@@ -20,9 +19,11 @@
             android:layout_marginStart="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="50dp" />
+            app:layout_constrainedWidth="true"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_marginEnd="20dp" />
 
     <com.google.android.material.imageview.ShapeableImageView
             android:background="@drawable/photo_filler"
@@ -30,37 +31,10 @@
             android:layout_height="60dp"
             android:id="@+id/avatar"
             android:scaleType="centerCrop"
-            app:shapeAppearanceOverlay="@style/rounded_image_view"
+            app:shapeAppearanceOverlay="@style/rectangle_image_view"
             android:contentDescription="@string/avatar"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-            android:id="@+id/btnAdd"
-            android:contentDescription="@string/add_team_member"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            style="@style/orange_button_style"
-            android:background="@drawable/ic_plus"
-            tools:ignore="TouchTargetSizeCheck"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="10dp" />
-
-    <Button
-            android:id="@+id/btnRemove"
-            android:contentDescription="@string/remove_team_member"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            style="@style/orange_button_style"
-            android:background="@drawable/ic_minus"
-            tools:ignore="TouchTargetSizeCheck"
-            android:visibility="gone"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="10dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
