--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -24,4 +24,10 @@
             android:icon="@drawable/ic_teams"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+    <item
+            android:id="@+id/searchFragment"
+            android:title="@string/nav_search"
+            android:icon="@drawable/ic_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 </menu>
