--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,6 +12,15 @@
             tools:layout="@layout/fragment_profile">
     </fragment>
     <fragment
+            android:id="@+id/readonlyProfileFragment"
+            android:name="com.ilyap.yuta.ui.fragments.ReadonlyProfileFragment"
+            android:label="ReadonlyProfileFragment">
+        <argument
+                android:name="userId"
+                app:argType="integer"
+                android:defaultValue="-1" />
+    </fragment>
+    <fragment
             android:id="@+id/projectsFragment"
             android:name="com.ilyap.yuta.ui.fragments.ProjectsFragment"
             android:label="fragment_projects"
@@ -59,12 +68,9 @@
                 app:popUpToInclusive="true" />
     </fragment>
     <fragment
-            android:id="@+id/readonlyProfileFragment"
-            android:name="com.ilyap.yuta.ui.fragments.ReadonlyProfileFragment"
-            android:label="ReadonlyProfileFragment">
-        <argument
-                android:name="userId"
-                app:argType="integer"
-                android:defaultValue="-1" />
+            android:id="@+id/searchFragment"
+            android:name="com.ilyap.yuta.ui.fragments.SearchFragment"
+            android:label="fragment_search"
+            tools:layout="@layout/fragment_search">
     </fragment>
 </navigation>
