--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -46,102 +46,52 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginTop="115dp">
 
-                <Button
-                        android:id="@+id/create_project"
-                        android:background="@drawable/button_blue"
-                        style="@style/blue_button"
-                        android:textAppearance="@style/active_toggle"
-                        android:text="@string/create_project"
-                        android:textAlignment="center"
-                        app:layout_constraintStart_toStartOf="@id/toggleGroup"
-                        android:paddingHorizontal="21dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:ignore="RtlHardcoded,TouchTargetSizeCheck"
-                        android:autoSizeTextType="uniform"
-                        android:drawableLeft="@drawable/ic_create"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginTop="25dp"
-                        android:drawablePadding="10dp" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/toggleGroup"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/background_switch"
-                        android:orientation="horizontal"
-                        app:checkedButton="@id/manager_button"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/create_project"
-                        android:layout_marginTop="25dp"
-                        android:layout_marginStart="25dp"
-                        android:layout_marginEnd="25dp"
-                        app:layout_constrainedWidth="true">
-
-                    <ToggleButton
-                            android:id="@+id/manager_button"
-                            android:textAppearance="@style/active_toggle"
-                            android:hapticFeedbackEnabled="false"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textOn="@string/manager_button"
-                            android:textOff="@string/manager_button"
-                            android:background="@drawable/button_switch"
-                            android:stateListAnimator="@null"
-                            tools:ignore="TouchTargetSizeCheck"
-                            android:paddingHorizontal="30dp"
-                            app:layout_constraintEnd_toStartOf="@id/member_button"
-                            android:layout_marginEnd="-10dp"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent" />
-
-                    <ToggleButton
-                            android:id="@+id/member_button"
-                            android:textAppearance="@style/default_toggle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:hapticFeedbackEnabled="false"
-                            android:textOn="@string/member_button"
-                            android:textOff="@string/member_button"
-                            android:background="@drawable/button_switch"
-                            android:stateListAnimator="@null"
-                            tools:ignore="TouchTargetSizeCheck"
-                            android:paddingHorizontal="40dp"
-                            app:layout_constraintStart_toEndOf="@id/manager_button"
-                            android:layout_marginStart="-20dp"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
                 <TextView
-                        android:id="@+id/empty_text"
+                        android:id="@+id/user_search_text"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/light_gray"
-                        android:textAppearance="@style/error_message"
-                        android:textAlignment="center"
-                        android:text="@string/empty_projects_text"
-                        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
-                        android:layout_marginTop="40dp"
-                        android:visibility="gone"
+                        android:text="@string/user_search_text"
+                        android:textAppearance="@style/reload_text"
+                        android:textAlignment="textStart"
+                        android:autoSizeTextType="uniform"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        app:layout_constraintEnd_toEndOf="parent" />
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginTop="35dp"
+                        android:layout_marginStart="35dp" />
+
+                <EditText
+                        android:id="@+id/find_user"
+                        android:importantForAutofill="no"
+                        android:inputType="text|textAutoComplete|textAutoCorrect"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        tools:ignore="TouchTargetSizeCheck"
+                        android:minHeight="38dip"
+                        android:maxLines="1"
+                        android:maxLength="150"
+                        android:hint="@string/find_user_text"
+                        android:textAppearance="@style/login"
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/background_edit_field"
+                        android:paddingHorizontal="16dp"
+                        android:drawableStart="@drawable/ic_search_mini"
+                        android:drawablePadding="10dp"
+                        android:layout_marginTop="18dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginHorizontal="35dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/user_search_text" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView"
+                        android:id="@+id/search_list"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
+                        app:layout_constraintTop_toBottomOf="@+id/find_user"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:nestedScrollingEnabled="false"
-                        android:paddingBottom="30dp"
-                        android:layout_marginTop="10dp" />
+                        android:layout_marginTop="30dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
