--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -61,7 +61,7 @@
                         android:layout_marginStart="35dp" />
 
                 <EditText
-                        android:id="@+id/find_user"
+                        android:id="@+id/search_user"
                         android:importantForAutofill="no"
                         android:inputType="text|textAutoComplete|textAutoCorrect"
                         android:layout_width="0dp"
@@ -87,11 +87,40 @@
                         android:id="@+id/search_list"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@+id/find_user"
+                        app:layout_constraintTop_toBottomOf="@+id/search_user"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:nestedScrollingEnabled="false"
                         android:layout_marginTop="30dp" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:background="@drawable/background_scrollview"
+                        android:animateLayoutChanges="true"
+                        android:id="@+id/progressLayout"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        app:layout_constraintEnd_toEndOf="@id/search_list"
+                        app:layout_constraintStart_toStartOf="@id/search_list"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/search_list"
+                        android:visibility="gone">
+
+                    <ProgressBar
+                            style="?android:attr/progressBarStyle"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:indeterminate="true"
+                            android:indeterminateTintMode="src_atop"
+                            android:indeterminateTint="@color/blue"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
