--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,15 +5,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F7F7F7"
         tools:context=".ui.LoginActivity"
-        tools:ignore="Overdraw">
+        android:background="@drawable/main_background"
+        android:paddingTop="30dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/header"
             android:layout_width="0dp"
             android:layout_height="90dp"
-            android:background="@drawable/gradient_main"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -30,6 +29,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:id="@+id/header_text"
                 android:textAlignment="center" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/header"
+            app:layout_constraintBottom_toTopOf="@+id/footer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="#F7F7F7">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
