user search api

--- a/app/src/main/res/layout/dialog_photo.xml
+++ b/app/src/main/res/layout/dialog_photo.xml
@@ -48,7 +48,8 @@
                 android:autoSizeTextType="uniform"
                 android:drawablePadding="15dp"
                 app:drawableLeftCompat="@drawable/ic_edit_miniature"
-                tools:ignore="TouchTargetSizeCheck" />
+                tools:ignore="TouchTargetSizeCheck"
+                />
 
         <TextView
                 android:id="@+id/delete_photo"
