added text for nonexistent project tech task

--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -92,6 +92,7 @@
 
         <Button
                 android:id="@+id/tech_task_button"
+                android:enabled="true"
                 android:background="@drawable/button_blue"
                 style="@style/blue_button"
                 android:textAppearance="@style/tech_task_button"
