--- a/app/src/main/res/layout/item_project_member.xml
+++ b/app/src/main/res/layout/item_project_member.xml
@@ -70,6 +70,16 @@
             app:layout_constraintBottom_toBottomOf="@id/photoBack"
             android:visibility="gone" />
 
+    <ImageView
+            android:layout_width="wrap_content"
+            android:contentDescription="@string/team_leader"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_team_leader"
+            android:visibility="gone"
+            android:id="@+id/teamLeaderIcon"
+            app:layout_constraintStart_toStartOf="@+id/photoBack"
+            app:layout_constraintTop_toTopOf="@+id/photoBack" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
