--- a/app/src/main/res/layout/item_project_member.xml
+++ b/app/src/main/res/layout/item_project_member.xml
@@ -4,11 +4,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="56dp"
-        android:layout_height="72dp">
+        android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="47dp"
-            android:layout_height="47dp"
+            android:layout_width="53dp"
+            android:layout_height="53dp"
             android:background="@drawable/photo_circle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -16,8 +16,8 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="46dp"
-            android:layout_height="46dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:backgroundTint="@color/white"
             android:background="@drawable/photo_circle"
             app:layout_constraintEnd_toEndOf="@id/photoBack"
@@ -40,25 +40,23 @@
             android:visibility="gone" />
 
     <TextView
-            android:textAppearance="@style/project_member"
             android:textAlignment="center"
             android:autoSizeTextType="none"
             android:textColor="@color/dark_gray"
-            android:layout_width="56dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/name"
             app:layout_constraintTop_toBottomOf="@id/photoBack"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="5dp"
             app:layout_constrainedWidth="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp" />
+            android:textAppearance="@style/project_member" />
 
     <com.google.android.material.imageview.ShapeableImageView
             android:background="@drawable/photo_filler"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/avatar"
             android:scaleType="centerCrop"
             app:shapeAppearanceOverlay="@style/rounded_image_view"
