--- a/app/src/main/res/layout/dialog_crop_photo.xml
+++ b/app/src/main/res/layout/dialog_crop_photo.xml
@@ -69,8 +69,7 @@
             android:layout_height="0dp"
             android:layout_centerInParent="true"
             android:clickable="true"
-            android:background="@drawable/photo_filler"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:contentDescription="@string/avatar"
