--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -220,8 +220,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/team_preview"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:layout_constrainedWidth="true"
                 app:layout_constraintTop_toBottomOf="@id/team_text"
                 android:layout_marginTop="8dp"
                 app:layout_constraintStart_toStartOf="@id/team_text"
