--- a/app/src/main/res/drawable/divider.xml
+++ b/app/src/main/res/drawable/divider.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
-    <size
-            android:height="1dp" />
-    <solid android:color="#EEEEEE" />
-</shape>
+<inset xmlns:android="http://schemas.android.com/apk/res/android"
+       android:insetRight="20dp"
+       android:insetLeft="20dp"
+       android:insetTop="15dp"
+       android:insetBottom="15dp">
+    <shape android:shape="rectangle">
+        <size android:height="1dp" />
+        <solid android:color="#EEEEEE" />
+    </shape>
+</inset>
