--- a/app/src/main/res/layout/dialog_create_project.xml
+++ b/app/src/main/res/layout/dialog_create_project.xml
@@ -262,6 +262,8 @@
                         android:layout_marginEnd="24dp"
                         android:minHeight="38dip"
                         android:textSize="13sp"
+                        android:popupBackground="@drawable/background_dialog"
+                        android:popupElevation="2dp"
                         tools:ignore="TouchTargetSizeCheck"
                         app:layout_constraintHorizontal_bias="0.0" />
             </androidx.constraintlayout.widget.ConstraintLayout>
