--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -83,6 +83,22 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/user_search_text" />
 
+                <TextView
+                        android:id="@+id/empty_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/light_gray"
+                        android:textAppearance="@style/error_message"
+                        android:textAlignment="center"
+                        android:text="@string/empty_users_text"
+                        app:layout_constraintTop_toBottomOf="@id/search_user"
+                        android:layout_marginTop="40dp"
+                        android:visibility="gone"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/search_list"
                         android:layout_width="0dp"
@@ -92,34 +108,6 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         android:nestedScrollingEnabled="false"
                         android:layout_marginTop="30dp" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"
-                        android:background="@drawable/background_scrollview"
-                        android:animateLayoutChanges="true"
-                        android:id="@+id/progressLayout"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        app:layout_constraintEnd_toEndOf="@id/search_list"
-                        app:layout_constraintStart_toStartOf="@id/search_list"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/search_list"
-                        android:visibility="gone">
-
-                    <ProgressBar
-                            style="?android:attr/progressBarStyle"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:indeterminate="true"
-                            android:indeterminateTintMode="src_atop"
-                            android:indeterminateTint="@color/blue"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
