--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -28,18 +28,17 @@
         <action
                 android:id="@+id/action_projectsFragment_to_profileFragment"
                 app:destination="@id/profileFragment"
-                app:popUpTo="@id/projectsFragment"
-                app:popUpToInclusive="true">
-            <argument
-                    android:name="fromFragment"
-                    app:argType="integer"
-                    android:defaultValue="-1" />
-        </action>
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
                 android:id="@+id/action_projectsFragment_to_readonlyProfileFragment"
                 app:destination="@id/readonlyProfileFragment"
-                app:popUpTo="@id/projectsFragment"
-                app:popUpToInclusive="true" />
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
             android:id="@+id/tasksFragment"
@@ -54,18 +53,17 @@
         <action
                 android:id="@+id/action_teamsFragment_to_profileFragment"
                 app:destination="@id/profileFragment"
-                app:popUpTo="@id/teamsFragment"
-                app:popUpToInclusive="true">
-            <argument
-                    android:name="fromFragment"
-                    app:argType="integer"
-                    android:defaultValue="-1" />
-        </action>
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
                 android:id="@+id/action_teamsFragment_to_readonlyProfileFragment"
                 app:destination="@id/readonlyProfileFragment"
-                app:popUpTo="@id/teamsFragment"
-                app:popUpToInclusive="true" />
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
             android:id="@+id/searchFragment"
@@ -73,9 +71,18 @@
             android:label="fragment_search"
             tools:layout="@layout/fragment_search">
         <action
+                android:id="@+id/action_searchFragment_to_profileFragment"
+                app:destination="@id/profileFragment"
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
                 android:id="@+id/action_searchFragment_to_readonlyProfileFragment"
                 app:destination="@id/readonlyProfileFragment"
-                app:popUpTo="@id/searchFragment"
-                app:popUpToInclusive="true" />
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
 </navigation>
