--- a/app/src/main/res/layout/item_team_search_in_project.xml
+++ b/app/src/main/res/layout/item_team_search_in_project.xml
@@ -11,7 +11,7 @@
 
     <TextView
             android:textAppearance="@style/list_member_name"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
             android:autoSizeTextType="uniform"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -20,7 +20,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="50dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="60dp"
             app:layout_constraintStart_toStartOf="parent"
             android:textSize="15sp" />
 
