--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -90,7 +90,7 @@
                 android:layout_marginTop="13dp"
                 android:layout_marginEnd="13dp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
                 android:id="@+id/tech_task_button"
                 android:enabled="true"
                 android:background="@drawable/button_blue"
@@ -102,8 +102,11 @@
                 android:layout_height="30dp"
                 tools:ignore="RtlHardcoded,TouchTargetSizeCheck"
                 android:autoSizeTextType="none"
-                android:drawableLeft="@drawable/ic_tech_task"
-                android:drawablePadding="10dp"
+                android:gravity="center"
+                app:icon="@drawable/ic_tech_task"
+                app:iconGravity="textStart"
+                app:iconPadding="10dp"
+                app:iconTint="@color/white"
                 app:layout_constraintBottom_toBottomOf="@id/view"
                 android:layout_marginVertical="0dp"
                 app:layout_constraintStart_toStartOf="@id/view"
@@ -111,7 +114,7 @@
                 app:layout_constraintTop_toBottomOf="@id/project_header"
                 android:layout_marginHorizontal="30dp"
                 app:layout_constraintVertical_bias="0.5"
-                android:textAlignment="viewStart"
+                android:textAlignment="center"
                 android:paddingTop="0dp"
                 android:paddingBottom="0dp"
                 android:minHeight="25dip" />
