change login activity navbar color to gradient

--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -218,6 +218,9 @@
                 android:textAppearance="@style/team_text"
                 android:textAlignment="center"
                 android:autoSizeTextType="uniform"
+                app:layout_constrainedWidth="true"
+                android:ellipsize="end"
+                android:maxLines="1"
                 app:layout_constraintStart_toStartOf="@id/project_info_container"
                 app:layout_constraintEnd_toEndOf="@id/project_info_container"
                 app:layout_constraintTop_toBottomOf="@id/project_info_container"
