--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.LoginActivity"
+        tools:context="com.yuta.authorization.ui.AuthorizationActivity"
         android:background="@drawable/background_fragment"
         android:paddingTop="30dp">
 
