--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/background_fragment"
         tools:context="com.yuta.app.MainActivity"
-        android:paddingTop="30dp">
+        android:fitsSystemWindows="true">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
