Downloaded fonts refactor

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -65,7 +65,7 @@
                         android:textIsSelectable="true"
                         android:textAppearance="@style/profile_desc"
                         android:textAlignment="center"
-                        android:fontFamily="@font/montserrat_regular"
+                        android:fontFamily="@font/montserrat"
                         android:autoSizeTextType="uniform"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
                         android:textIsSelectable="true"
                         android:textAppearance="@style/profile_desc"
                         android:textAlignment="center"
-                        android:fontFamily="@font/montserrat_regular"
+                        android:fontFamily="@font/montserrat"
                         android:autoSizeTextType="uniform"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -100,7 +100,7 @@
                         android:textIsSelectable="true"
                         android:textAppearance="@style/profile_desc"
                         android:textAlignment="center"
-                        android:fontFamily="@font/montserrat_regular"
+                        android:fontFamily="@font/montserrat"
                         android:autoSizeTextType="uniform"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
