--- a/app/src/main/res/layout/dialog_create_project.xml
+++ b/app/src/main/res/layout/dialog_create_project.xml
@@ -23,7 +23,7 @@
                 android:paddingBottom="25dp">
 
             <TextView
-                    android:id="@+id/create_text"
+                    android:id="@+id/title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/create_project"
@@ -45,7 +45,7 @@
                     android:src="@drawable/separator"
                     android:contentDescription="@string/separator"
                     android:layout_marginTop="20dp"
-                    app:layout_constraintTop_toBottomOf="@id/create_text"
+                    app:layout_constraintTop_toBottomOf="@id/title"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -63,7 +63,7 @@
                     android:layout_alignParentEnd="true"
                     android:paddingHorizontal="16dp"
                     android:paddingVertical="10dp"
-                    app:layout_constraintTop_toBottomOf="@id/name_desc"
+                    app:layout_constraintTop_toBottomOf="@id/desc"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginTop="15dp"
@@ -72,7 +72,7 @@
                     android:layout_marginEnd="24dp" />
 
             <TextView
-                    android:id="@+id/name_desc"
+                    android:id="@+id/desc"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/create_project_desc"
