--- a/app/src/main/res/layout/dialog_delete.xml
+++ b/app/src/main/res/layout/dialog_delete.xml
@@ -36,8 +36,9 @@
             android:layout_marginEnd="20dp"
             android:layout_marginTop="5dp" />
 
+    <!--todo-->
     <TextView
-            android:id="@+id/name_desc"
+            android:id="@+id/desc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/delete_photo_desc"
@@ -75,7 +76,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="22dp"
             tools:ignore="TouchTargetSizeCheck"
-            app:layout_constraintTop_toBottomOf="@id/name_desc"
+            app:layout_constraintTop_toBottomOf="@id/desc"
             android:layout_marginTop="30dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
