--- a/app/src/main/res/layout/dialog_edit_user.xml
+++ b/app/src/main/res/layout/dialog_edit_user.xml
@@ -21,7 +21,7 @@
             tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
-            android:id="@+id/create_text"
+            android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/edit_text"
@@ -43,7 +43,7 @@
             android:src="@drawable/separator"
             android:contentDescription="@string/separator"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/create_text"
+            app:layout_constraintTop_toBottomOf="@id/title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
