--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -25,7 +25,7 @@
             <Button
                     android:layout_width="22dp"
                     android:layout_height="22dp"
-                    android:id="@+id/log_out"
+                    android:id="@+id/logout"
                     android:contentDescription="@string/exit_button"
                     android:background="@drawable/ic_exit"
                     style="@style/classic_button_style"
